Bug 1141332 - Disable content decoding and use decoded length on intercepted channels. r=mcmanus